Modifiation des chemins de settings.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js" defer></script>
+    <script src="profil/settings.js"></script>
 
     <title>Matcha Design</title>
 </head>
