--- a/public/settings.html
+++ b/public/settings.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <link rel="stylesheet" href="style.css">
-  <script src="/profil/settings.js" defer></script>
+  <script type="module" src="profil/settings.js" defer></script>
 
   <title>Préférences du thème</title>
 </head>
@@ -28,7 +28,7 @@
         </a>
     </div>
 
-    <div class="card">
+    <div class="card no-profil">
           <h2>Paramètres générales :</h2>
           
           <div class="language-selector">
