Gestion de la page de profil

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js" defer></script>
-    <script src="profil/settings.js"></script>
+    <script src="profil/settings.js" defer></script>
 
     <title>Matcha Design</title>
 </head>
@@ -22,10 +22,9 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a class="menu-a" href="index.html">Accueil</a></li>
-                    <li><a class="menu-a" href="a-propos">A propos</a></li>
-                    <li><a class="menu-a" href="settings.html">Paramètres</a></li>      
+                    <li><a class="menu-a" href="a-propos">A propos</a></li>    
                 </ul>
-                <!-- <button type="button" id="btnHeader" class="btn-accent">Se connecter</button> -->
+
                 <a type="button" id="btnHeader" class="btn-accent" href="register.html">Se connecter</a>
             </nav>
         </header>
