--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
         <h1 class="hero-title userPage lineUp">Connexion</h1> 
 
         <!-- formulaire -->
-        <form class="form userPage" id="loginForm" action="/login" method="POST" autocomplete="off">
+        <form class="form userPage" id="loginForm" method="POST" autocomplete="off">
             <div class="container-input">
                 <label for="username" class="userPage">Nom</label>
                 <input id="username" class="userPage" type="text" name="username" placeholder="Nom d'utilisateur" required minlength="4">
