--- a/public/profil/profil.html
+++ b/public/profil/profil.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../profil/profil.css">
-    <script src="../profil/settings.js" defer></script>
+    <link rel="stylesheet" href="/profil/profil.css">
+    <script src="/profil/settings.js" defer></script>
     <title>Page de profil utilisateurs</title>
 </head>
 <body>
